--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,11 @@
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
                 <executions>
-                    <goals>
-                        <goal>idl-protocol</goal>
-                    </goals>
+                    <execution>
+                        <goals>
+                            <goal>idl-protocol</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
