--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
         </dependency>
-
         <!-- jackson的JSON序列化/反序列化 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -110,6 +109,22 @@
             <groupId>org.apache.avro</groupId>
             <artifactId>avro-ipc</artifactId>
             <version>1.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libfb303</artifactId>
+            <version>0.9.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.3</version>
+        </dependency>
+        <!-- JBoss Marshaling序列化框架 -->
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-serial</artifactId>
+            <version>2.0.0.Beta2</version>
         </dependency>
     </dependencies>
 
